# ESP32-OBD-CAN-MONITOR

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  app_main.c  old2_app_main.c
main/can/: can_bus.c  can_bus.h
main/lcd/: lcd.c  lcd.h
main/obd/: obd.c  obd.h  obd_data.c
main/web/: diagnostics.html  errors.html  graph.html  index.html  script.js  style.css  web_server.c  web_server.h
main/web/js/: animations.js  chart-script.js  diagnostics-script.js
